--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -22,7 +22,6 @@
     <string name="show_count_classes">Количество пар</string>
     <string name="report_a_problem">Сообщить о проблеме</string>
     <string name="collapse">Свернуть</string>
-    <string name="app_info">Приложение создано для удобного просмотра и сохранения расписаний РУТ(МИИТ)</string>
 
     <string name="empty_day">На это день пары не запланированы</string>
     <string name="no_saved_schedule">Отсутствует сохраненное расписание</string>
@@ -34,6 +33,7 @@
     <string name="update_problem">Возникли проблемы с обновлением</string>
     <string name="try_again">Попробовать снова</string>
 
+    <string name="comment">Комментарий</string>
     <string name="save">Сохранить</string>
     <string name="copy_link">Скопировать ссылку</string>
     <string name="save_pdf">Скачать pdf</string>
@@ -71,6 +71,15 @@
     <string name="Comment">Комментарий</string>
     <string name="Enter_comment">Введите комментарий</string>
 
+    <string name="Class">Пара</string>
+    <string name="type">Тип</string>
+    <string name="time">Время</string>
+    <string name="place">Место</string>
+
+    <string name="unable_load_news_list">Не удалось загрузить список новостей</string>
+    <string name="repeat">Повторить</string>
+    <string name="my">Мои</string>
+
     <string name="light">Светлая</string>
     <string name="dark">Темная</string>
     <string name="auto">Авто</string>
@@ -85,6 +94,7 @@
     <string name="error_load_schedule">Произошла ошибка загрузки расписания</string>
     <string name="empty_base">Сохраните как минимум одно расписание для его отображения</string>
     <string name="author">Автор</string>
+    <string name="no_classes">Занятий больше не планируется</string>
     <string name="news_updates">Новости и обновления</string>
     <string name="source_code">Исходный код</string>
     <string name="no_comments">Отсутствуют комментарии к парам</string>
