--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="copy_link">Copy link</string>
     <string name="save_pdf">Download pdf</string>
     <string name="save">Save</string>
-
+    <string name="maybe_you_serch">Maybe you search</string>
     <string name="settings">Settings</string>
     <string name="week">week</string>
     <string name="support">Support</string>
