--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -17,7 +17,7 @@
     <string name="support">Поддержать</string>
     <string name="settings">Настройки</string>
 
-    <string name="maybe_you_serch">Возможно, вы ищите</string>
+    <string name="saved_schedules">Сохраненные расписания</string>
     <string name="show_tags">Теги</string>
     <string name="show_count_classes">Количество пар</string>
     <string name="report_a_problem">Сообщить о проблеме</string>
