--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="app_name">Schedule MIIT</string>
 
+    <string name="my">My</string>
     <string name="empty_day">There are no classes scheduled for this day</string>
     <string name="try_again">Try again</string>
     <string name="update_problem">There were problems with the update</string>
@@ -29,6 +30,7 @@
     <string name="search">Search</string>
 
     <string name="group">Group</string>
+    <string name="Lecturers">Lecturers</string>
     <string name="lecturer">Lecturer</string>
 
     <string name="course">course</string>
@@ -61,7 +63,6 @@
     <string name="github" translatable="false">GitHub</string>
 
     <string name="Class">Class</string>
-    <string name="type">Type</string>
     <string name="time">Time</string>
     <string name="place">Place</string>
 
@@ -71,14 +72,13 @@
     <string name="Yellow">Yellow</string>
     <string name="Red">Red</string>
     <string name="Subject">Subject</string>
-    <string name="Type">Type</string>
     <string name="Room">Room</string>
     <string name="Rooms">Rooms</string>
-    <string name="Lecturers">Lecturers</string>
+
     <string name="Groups">Groups</string>
     <string name="Comment">Comment</string>
     <string name="Enter_comment">Enter comment</string>
-    <string name="my">My</string>
+
 
     <string name="unable_load_news_list">Unable to load news list</string>
     <string name="repeat">Repeat</string>
@@ -104,4 +104,42 @@
     <string name="source_code">Source code</string>
     <string name="no_comments">There are no comments for the classes</string>
     <string name="comment_add">You can add a comment by clicking on a class</string>
+
+    <string name="confirm">Confirm</string>
+
+    <string name="adding_a_schedule">Adding a schedule</string>
+    <string name="schedule_name">Schedule name</string>
+    <string name="start_date">Start date</string>
+    <string name="end_date">Start date</string>
+    <string name="no_start_date_specified">No start date specified</string>
+    <string name="no_end_date_specified">No end date specified</string>
+    <string name="create">Create</string>
+
+    <string name="adding_a_class">Adding a class</string>
+    <string name="class_name">Class name</string>
+    <string name="class_type">Class type</string>
+    <string name="not_specified">Not specified</string>
+    <string name="date">Date</string>
+    <string name="start_time">Start time</string>
+    <string name="end_time">Start time</string>
+    <string name="room_number">Room number</string>
+    <string name="full_name_of_lecturer">Full name of lecturer</string>
+    <string name="group_number">Group number</string>
+    <string name="add">Add</string>
+    <string name="no_name_specified">No name specified</string>
+    <string name="no_date_specified">No date specified</string>
+    <string name="no_start_time_specified">No start time specified</string>
+    <string name="no_end_time_specified">No end time specified</string>
+    <string name="time_is_chosen_incorrectly">Time is chosen incorrectly</string>
+    <string name="room_number_not_specified">Room number not specified</string>
+    <string name="provide_the_names_of_all_lecturers">Provide the names of all lecturers</string>
+    <string name="provide_the_numbers_of_all_groups">Provide the numbers of all groups</string>
+
+    <string name="deleting_class">Deleting class</string>
+    <string name="really_delete_class">Really delete class</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+
+    <string name="date_and_time">Date and time</string>
+    <string name="events_count_error">The maximum number of classes per day has been reached</string>
 </resources>
