--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,12 +10,14 @@
     <string name="app_name">Schedule MIIT</string>
     <string name="author">Author</string>
     <string name="auto">Auto</string>
+    <string name="back">Back</string>
     <string name="class_name">Class name</string>
     <string name="class_type">Class type</string>
     <string name="collapse">Collapse</string>
     <string name="color_style">Color style</string>
     <string name="comment">Comment</string>
-    <string name="comments_on_tomorrow_events">Comments on tomorrow class</string>
+    <string name="comments_on_events">Comments on classes</string>
+    <string name="comments_on_tomorrow_events">Comments on tomorrow classes</string>
     <string name="compact_view">Compact view</string>
     <string name="confirm">Confirm</string>
     <string name="create">Create</string>
@@ -23,6 +25,7 @@
     <string name="dark">Dark</string>
     <string name="date">Date</string>
     <string name="date_and_time">Date and time</string>
+    <string name="day_of_week">Day of week</string>
     <string name="day_off">Day off</string>
     <string name="decor">Decor</string>
     <string name="delete">Delete</string>
@@ -35,6 +38,8 @@
         <item quantity="other">classes</item>
         <item quantity="two">classes</item>
     </plurals>
+    <string name="every_week">Every week</string>
+    <string name="once_week">Once every %1$d week</string>
     <string name="empty_base">Save at least one schedule to display it</string>
     <string name="empty_day">There are no classes scheduled for this day</string>
     <string name="empty_here">It`s empty here</string>
@@ -91,6 +96,7 @@
     <string name="rename">Rename</string>
     <string name="renaming">Renaming</string>
     <string name="repeat">Repeat</string>
+    <string name="repetition">Repetition</string>
     <string name="report_a_problem">Report a problem</string>
     <string name="return_default">Return default</string>
     <string name="review">Review</string>
@@ -129,6 +135,6 @@
     <string name="unable_load_news_list">Unable to load news list</string>
     <string name="unknown_error">Unknown error</string>
     <string name="update">Update</string>
-    <string name="week">Week</string>
+    <string name="week">Week %1$s</string>
     <string name="yes">Yes</string>
 </resources>
